Problem statement 1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: yogii98/wisecow:latest
        ports:
        - containerPort: 4499
        imagePullPolicy: Always
