Problem statement 1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4499
      nodePort: 30100
  selector:
    app: wisecow
